the image and caption allgnment changed to center

--- a/Gallery.html
+++ b/Gallery.html
@@ -13,12 +13,12 @@
         <a href="contact.html">Contact</a>|
         <a href="Gallery.html">Gallery</a>
     <hr>
-    <table>
+    <table align="center">
         <tr> 
             <td>
                 <figure>
-                        <img src="https://images.unsplash.com/photo-1462899006636-339e08d1844e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=max&w=500&q=60" alt="tall buildings">
-                        <figcaption>Beautiful Towers</figcaption>
+                        <img src="https://images.unsplash.com/photo-1526649661456-89c7ed4d00b8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=400&q=60" alt="black bunting flag">
+                        <figcaption>Start Coding</figcaption>
                 </figure>
                 <hr>
             </td>
@@ -44,7 +44,7 @@
         </tr>
     </table>    
     <hr>
-        <a href="http://www.telegram.com" target="_blank"><img src="images/tg.png" alt="telegram icon"></a>
+        <a href="http://www.telegram.com" target="_blank"><img src="images/tg.png" alt="telegram icon"></a><br>
         <a href="http://www.facebook.com" target="_blank"><img src="images/fb.png" alt="facebook icon"></a>
         <p style="text-align: center;">Developed by Mintesnot B. &copy;20020</p>
     <hr>
