--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
                         <td></td>
                     <td>
                         <label for="suggestion">Suggestion</label><br>
-                        <textarea name="suggestion" id="suggestion" cols="30" rows="10"></textarea>
+                        <textarea name="suggestion" id="suggestion" cols="40" rows="6"></textarea>
                     </td>
                     
                 </tr>
@@ -151,6 +151,7 @@
                 </tr>
             </table>
         </form>
+       <div class="mapouter"><div class="gmap_canvas"><iframe width="800" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=Addis%20Ababa%20Institute%20of%20Technolgy&t=k&z=13&ie=UTF8&iwloc=&output=embed" frameborder="1" scrolling="no" marginheight="0" marginwidth="5"></iframe><a href="https://www.online-timer.net">timrer</a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:1000px;}</style></div>
     </section>         
     <hr>
         <a href="http://www.telegram.com" target="_blank"><img src="images/tg.png" alt="telegram icon"></a><br>
