--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mintesnot Bezabhi</title>
     <link rel="icon" type="image/png" href="images/logo.png">
-<body>
+<body >
     <!-- This is the first step... -->
     <hr>
         <a href="index.html" >Home</a> |
@@ -43,8 +43,8 @@
                 <li>Fictions specialy of literatuer
                     <li>Books that impress me the most:
                         <ul>
-                            <li>One Love by Mr.Hadis Almayhu</li>
-                            <li>Black Magic by Mr. Samuale A.</li>
+                            <li>Born Crime by Trevor Noah</li>
+                            <li>Dertogada by Yismake Worku</li>
                         </ul>
 
                     </li>
@@ -88,7 +88,7 @@
         </tr>
     </table>
     <hr>
-        <a href="http://www.telegram.com" target="_blank"><img src="images/tg.png" alt="telegram icon"></a>
+        <a href="http://www.telegram.com" target="_blank"><img src="images/tg.png" alt="telegram icon"></a><br>
         <a href="http://www.facebook.com" target="_blank"><img src="images/fb.png" alt="facebook icon"></a>
         <p style="text-align: center;">Developed by Mintesnot B. &copy;20020</p>
     <hr>
