--- a/Gallery.html
+++ b/Gallery.html
@@ -13,6 +13,8 @@
         <a href="contact.html">Contact</a>|
         <a href="Gallery.html">Gallery</a>
     <hr>
+    <h1 align="center">Lovely Images</h1>
+    <hr>
     <table align="center">
         <tr> 
             <td>
@@ -46,7 +48,7 @@
     <hr>
         <a href="http://www.telegram.com" target="_blank"><img src="images/tg.png" alt="telegram icon"></a><br>
         <a href="http://www.facebook.com" target="_blank"><img src="images/fb.png" alt="facebook icon"></a>
-        <p style="text-align: center;">Developed by Mintesnot B. &copy;20020</p>
+        <p style="text-align: center;">Developed by Mintesnot B. &copy;2020</p>
     <hr>
     
 </body>
