--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mintesnot Bezabhi</title>
     <link rel="icon" type="image/png" href="images/logo.png">
+    <link rel="stylesheet" href="css/style.css">
+    
 <body >
     <!-- This is the first step... -->
     <hr>
-        <a href="index.html" >Home</a> |
-        <a href="contact.html">Contact</a>|
-        <a href="Gallery.html">Gallery</a>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="contact.html">contact</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </header>
     <hr>
     <table cellspacing="10">   
         <tr>
