Question number six is added to the blog page

--- a/blog.html
+++ b/blog.html
@@ -21,8 +21,8 @@
         </ul>
     </nav>
     <div >
-        <section>
-            <h3 class="title">relative size and responsive web page</h3>
+        <section id="question4">
+            <h2 class="title">relative size and responsive web page</h2>
             <article>
                 <p>
                     One of the concering topics in web developing fields is the size of elements in styling. How size
@@ -55,9 +55,8 @@
             </article>
             <p class="date">March 18 , 2020 : 7:00pm</p>
         </section>
-        <!-- second post -->
-        <section>
-            <h3 class="title">font size interpration of the browser</h3>
+        <section id="question5">
+            <h2 class="title">font size interpration of the browser</h2>
             <article>
                 <p>
                     First of all what does it means font size? <br>
@@ -72,13 +71,60 @@
             </article>
             <p class="date">March 18 , 2020 : 7:30pm</p>
         </section>
-        <!-- Third post -->
-        <section>
-            <h2 class="title">My Third Post</h2>
+      
+        <section id="question6">
+            <h2 class="title">specific changes in css3</h2>
             <article>
+                <p>
+                    The latest version of CSS have been more flexiable and interesting. It addes many new features which were not 
+                    available in the previous versions. some of the features are discussed below.    
+                </p>
+                <ul>
+                    <li>
+                        <em>CSS3 selectors</em>
+                        <p>
+                            Selectors are the basis of CSS. Every rule in CSS starts with selector. In the new version CSS some 
+                            attribute selectors were introduced. These selectors allow for substring selection.
+                            <ol>
+                                <li>matching element whose attribute starts with substring of the begining value <br>
+                                    <p>
+                                        eg. a[href^='http://']{color:green;}
+                                    </p>
+                                </li>
+                                <li>matching element whose attribute end with substring of the end of value <br>
+                                    <p>
+                                        eg. a[href$= '.jpg']{border: 1px solid;}
+                                    </p>
+                                </li>
+                                <li>matcing any element whose attribute matches with token in attribute value <br>
+                                    <p>
+                                        eg. img[src*='family']{width:400px;}
+                                    </p>
+                                </li>
+                            </ol> 
+                        </p>
+                    </li>
+                    <li>
+                        <em>multiple background images</em>
+                        <p>
+                            It provides us with the ability to add more than one background images to and element.
+                            <p>eg. background-image: url(firstImage.png), url(secondImage.png), url(thridIamge.png);</p>
+                        </p>
+                    </li>
+                    <li>
+                        <em>flexbox</em>
+                        <p>flexbox layout which is very effecient display property value. It has many default value
+                            which are basic in layout. Arranging contents horizontally by default, easy way to give
+                            spaces between and around the contents. Width property is not basically used, flex property
+                            propery will adjust the contents. wrap value will automatically drop element to the next 
+                            line if the width of the container is not enough.
+                        </p>
+                    </li>
+
+                </ul>
                 
             </article>
-            <p class="date">March 10 , 2020 : 2:35pm</p>
+            <p class="date">March 19 , 2020 : 12:27pm</p>
         </section>
     </div>
     <footer>
