some modefications and few animation added final version

--- a/myWorks.html
+++ b/myWorks.html
@@ -8,6 +8,7 @@
     <style>
         body{
             font-size: 1.2rem;
+            background-color: #c0dbe2;
         }
         h2{
             border-bottom: 3px solid;
@@ -23,6 +24,9 @@
     <h1>assignment four</h1>
     <nav>
         <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
             <li>
                 <a href="question1.html" target="_blank">Question1</a>
             </li>
@@ -61,18 +65,22 @@
                 <ul>
                     <li>
                         Hint: consider the browsers capability of providing zoom feature.
+                        <a href="blog.html#question4">click for answer</a>
                     </li>
                 </ul>
+                
             </li>
             <li>
                 <p>
-                    We said 16px is default browser width so what does ti mean when we say 200px? How does the browser interpret that?
+                    We said 16px is default browser width so what does it mean when we say 200px? How does the browser interpret that?
+                    <a href="blog.html#question5">click for answer</a>
                 </p>
                
             </li>
             <li>
                 <p>
                     Explain in detail (in technical terms) the specific changes in css3.
+                    <a href="blog.html#question6">click for answer</a>
                 </p>       
             </li>
         </ol>
